--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,46 @@
     transform: rotate(360deg);
   }
 }
+
+body {
+  background-color: navajowhite;
+}
+.table-container {
+  margin: 20px;
+ display: flex;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th, td {
+  border: 1px solid black;
+  padding: 8px;
+  
+  text-align: center;
+}
+
+th {
+  background-color: #f2f2f2;
+}
+
+th:first-child,
+td:first-child {
+  font-weight: bold;
+}
+
+
+.btn {
+  text-align: center;
+  font-size: "16px";
+   padding: "10px 20px" 
+
+}
+
+
+.box{
+padding: 64px;
+
+}
